--- a/systemd/ambed.service
+++ b/systemd/ambed.service
@@ -7,7 +7,7 @@ After=systemd-user-session.service network.target
 Type=simple
 ExecStartPre=-/sbin/rmmod ftdi_sio
 ExecStartPre=-/sbin/rmmod usbserial
-ExecStart=/usr/local/bin/ambed 127.0.0.1
+ExecStart=/usr/local/bin/ambed
 Restart=always
 
 [Install]
