--- a/systemd/xrfd.service
+++ b/systemd/xrfd.service
@@ -5,7 +5,7 @@ After=systemd-user-session.service network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/xrfd CHANGEME any any
+ExecStart=/usr/local/bin/xrfd
 Restart=always
 
 [Install]
