bash scripts for management:

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 *.o
 *.d
 .vscode
-*.blacklist
-*.whitelist
-*.interlink
-*.terminal
-*.service
-xlxd
-xrfd
+./*.blacklist
+./*.whitelist
+./*.interlink
+./*.terminal
+./*.service
+configure.mk
+configure.h
+reflector.cfg
+src/xlxd
+src/xrfd
+ambed/ambed
