fixed error in Makefile uninstall

--- a/src/Makefile
+++ b/src/Makefile
@@ -99,5 +99,5 @@ uninstall :
 	systemctl stop $(EXE).service
 	rm -f $(CFGDIR)/dmrid.dat
 	systemctl disable $(EXE).service
-	rm -f /etc/systemd/system/xlxd.service
+	rm -f /etc/systemd/system/$(EXE).service
 	systemctl daemon-reload
