MIN MAX macro fix

--- a/ambed/Makefile
+++ b/ambed/Makefile
@@ -13,9 +13,9 @@ GCC = g++
 
 
 ifeq ($(debug), true)
-CFLAGS = -ggdb3 -W -MMD -MD -std=c++11
+CFLAGS = -ggdb3 -W -Werror -MMD -MD -std=c++11
 else
-CFLAGS = -W -MMD -MD -std=c++11
+CFLAGS = -W -Werror -MMD -MD -std=c++11
 endif
 
 LDFLAGS = -pthread
